<resources>
    <string name="versionCode">2.0.0</string>
    <string name="app_name">蛮像</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_browse">漫像</string>
    <string name="title_zhao">专题</string>
    <string name="title_mine">我的</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="regist"><u>新用户注册</u></string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="third_login_title">合作账号登录</string>
    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="cpassword">密码</string>
    <string name="repassword">重复密码</string>
    <string name="Continue">继续</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="newpwd">新密码</string>
    <string name="agree">我同意</string>
    <string name="agreement">用户协议及隐私条款</string>
    <string name="get">获取验证码</string>
    <string name="day">每日</string>
    <string name="miaosha">秒杀</string>
    <string name="message">我的消息</string>
    <string name="collect">我的收藏</string>
    <string name="person">个人资料</string>
    <string name="fankui">反馈意见</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="quit">退出</string>
    <string name="going_order">进行中的订单</string>
    <string name="finished_order">已完成的订单</string>
    <string name="zhao_huajia">找画家帮我画</string>
    <string name="share_friend">分享给朋友</string>
    <string name="artist_info">画家信息</string>
    <string name="daojishi">倒计时</string>
    <string name="start_warm">开启提醒</string>
    <string name="mashang_pay">马上支付</string>
    <string name="buy_servcie">购买服务</string>

    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中…</string>
    <string name="drop_down_list_footer_default_text">点击加载更多</string>
    <string name="drop_down_list_footer_loading_text">加载中…</string>
    <string name="drop_down_list_footer_no_more_text">加载完成</string>
    <string name="image_content">图片</string>

    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dismiss">隐藏</string>

    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="has_no_data">还什么都没有呢</string>

    <string name="tv_image_price">￥ 399.00</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">加载完成</string>

</resources>
