<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:background="@color/bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/login_header"
        layout="@layout/wg_mine_header_2"
        />

    <ImageView
        android:layout_below="@id/login_header"
        style="@style/mine_setting_item_iv_ae" />

   <ImageView
       android:id="@+id/logo"
       android:layout_below="@+id/login_header"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@mipmap/login_logo"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="@dimen/login_logo_margin"
       />
    <EditText
        android:id="@+id/username"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:paddingLeft="@dimen/login_input_padding"
        android:paddingRight="@dimen/login_input_padding"
        android:layout_marginTop="@dimen/username_input_h_margin"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/input_size"
        android:hint="@string/username"
        android:textColorHint="@color/wg_font_2_description"
        android:textColor="@color/wg_font_1_black"
        android:textCursorDrawable="@drawable/color_cursor"
        style="@style/rounded_edittext_style"
        android:drawableStart="@mipmap/username"
        android:drawableLeft="@mipmap/username"
        android:inputType="phone"
        />

    <EditText

        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:paddingLeft="@dimen/login_input_padding"
        android:paddingRight="@dimen/login_input_padding"
        android:layout_marginTop="@dimen/wg_item_distance_14"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/input_size"
        android:hint="@string/password"
        android:textColorHint="@color/wg_font_2_description"
        android:textColor="@color/wg_font_1_black"
        android:textCursorDrawable="@drawable/color_cursor"
        style="@style/rounded_edittext_style"
        android:drawableStart="@mipmap/password"
        android:drawableLeft="@mipmap/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:layout_marginTop="@dimen/wg_item_distance_14"
        android:background="@drawable/rounded_button_bg"
        android:textSize="@dimen/wg_font_17"
        android:textColor="@color/btn_font"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/regist"
        android:layout_below="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/password_input_h_margin"
        android:textSize="@dimen/input_size"
        android:text="@string/regist"
        android:textColor="@color/input_hint_font"
        />
    <TextView
        android:id="@+id/forget_pwd"
        android:layout_below="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/password_input_h_margin"
        android:textSize="@dimen/wg_font_15"
        android:text="@string/forget_pwd"
        android:textColor="@color/input_hint_font"
        />

    <TextView
        android:id="@+id/third_login_title"
        android:layout_below="@+id/regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/third_login_title_h_margin"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/input_size"
        android:text="@string/third_login_title"
        android:textColor="@color/input_hint_font"
        />
    <LinearLayout
        android:id="@+id/third_login_layout"
        android:layout_below="@+id/third_login_title"
        android:layout_marginTop="@dimen/password_input_h_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
       <ImageButton
           android:id="@+id/weixin_login"
           android:layout_width="@dimen/third_login_btn_size"
           android:layout_height="@dimen/third_login_btn_size"
           android:background="@drawable/weixin_btn_bg"
           android:scaleType="fitXY"
           />
        <ImageButton
            android:id="@+id/qq_login"
            android:layout_width="@dimen/third_login_btn_size"
            android:layout_height="@dimen/third_login_btn_size"
            android:layout_marginLeft="@dimen/third_login_btn_l_margin"
            android:background="@drawable/qq_btn_bg"
            android:scaleType="fitXY"
            />
        <ImageButton
            android:id="@+id/sina_login"
            android:layout_width="@dimen/third_login_btn_size"
            android:layout_height="@dimen/third_login_btn_size"
            android:layout_marginLeft="@dimen/third_login_btn_l_margin"
            android:background="@drawable/sina_btn_bg"
            android:scaleType="fitXY"
            />
    </LinearLayout>
</RelativeLayout>
