<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:background="@color/bg_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <include android:id="@+id/regist_header"
       layout="@layout/wg_mine_header_2"
       />

    <ImageView
        android:layout_below="@id/regist_header"
        style="@style/mine_setting_item_iv_ae" />

    <EditText
        android:id="@+id/phone"
        android:layout_below="@+id/regist_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:paddingLeft="@dimen/regist_input_padding"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/input_size"
        android:hint="@string/phone"
        android:textColorHint="@color/wg_font_2_description"
        android:textColor="@color/wg_font_1_black"
        style="@style/rounded_edittext_style_2"
        android:singleLine="true"
        />
    <LinearLayout
        android:id="@+id/code_layout"
        android:layout_below="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:layout_marginTop="@dimen/wg_item_distance_14"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/code"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_input_height"
            android:paddingLeft="@dimen/regist_input_padding"
            android:textSize="@dimen/input_size"
            android:hint="@string/code"
            android:textColorHint="@color/wg_font_2_description"
            android:textColor="@color/wg_font_1_black"
            style="@style/rounded_edittext_style_2"
            android:singleLine="true"
            />
        <Button
            android:id="@+id/get_code"
            android:text="@string/get"
            android:textSize="@dimen/code_btn_size"
            android:textColor="@color/wg_button_green"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_get_btn_height"
            android:layout_marginLeft="@dimen/regist_get_l_margin"
            android:background="@drawable/wg_drawable_evaluate_empty_bg"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:paddingLeft="@dimen/regist_input_padding"
        android:layout_marginTop="@dimen/wg_item_distance_14"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/input_size"
        android:hint="密码"
        android:textColorHint="@color/wg_font_2_description"
        android:textColor="@color/wg_font_1_black"
        style="@style/rounded_edittext_style_2"
        android:singleLine="true"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/bangd"
        android:text="确认绑定"
        android:layout_below="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_logo_h_margin"
        android:layout_marginRight="@dimen/login_logo_h_margin"
        android:layout_marginTop="@dimen/wg_item_distance_14"
        android:background="@drawable/rounded_button_bg"
        android:textSize="@dimen/wg_font_17"
        android:textColor="@color/btn_font"
        android:textAllCaps="false"
        />

</RelativeLayout>
